2003-02-25  Derek Price  <derek@ximbiot.com>

	* configure.in: Remove the forced nondetection of mktemp I was using
	to test the scripts.

	* configure: Regenerated.

2003-02-25  Derek Price  <derek@ximbiot.com>

	* configure.in: Add checks for mktemp and sendmail.
	* mktemp.sh: New file.

	* Makefile.in: Regenerated.
	* configure: Ditto.

2003-02-25  Derek Price  <derek@ximbiot.com>

	* NEWS (Changes since 1.11.5): Mention UserAdminOptions.

2003-02-06  Derek Price  <derek@ximbiot.com>

	* NEWS (Changes since 1.11.5): Note error message corrections and
	documentation corrections.

2003-01-31  Derek Price  <derek@ximbiot.com>

	* configure.in: Check for varargs.h.  Use the AC_C_PROTOTYPES macro
	to check for handling of prototypes.

	* configure: Regenerated.
	* config.h.in: Regenerated.

2003-01-31  Derek Price  <derek@ximbiot.com>

	* acinclude.m4 (ACX_WITH_GSSAPI): Move the checkin from 1/23 to here.
	* configure.in: Update version to 1.12.10.1.

	* aclocal.m4: Regenerated.
	* configure: Regenerated.

2003-01-30  Larry Jones  <lawrence.jones@eds.com>

	* FAQ: Update URL for tkCVS info.

	* NEWS (Changes from 1.11.2 to 1.11.3): Add note about fixing watch
	in server mode.

2003-01-28  Derek Price  <derek@ximbiot.com>

	* INSTALL: Remove a reference to options.h.
	(Thanks to Jenn Vesperman <jenn@anthill.echidna.id.au> for the report.)

2003-01-28  Larry Jones  <lawrence.jones@eds.com>

	* NEWS: Update for 1.11.5, add notes about bug fixes in older
	versions.

2003-01-23  Derek Price  <derek@ximbiot.com>

	* aclocal.m4 (WITH_GSSAPI): Check for libcrypt before libroken to
	satisfy a FreeBSD 4.6 dependency.
	(Thanks to Jan Ruzicka <jan.ruzicka@comtechmobile.com> for the bug
	report and a partial fix.)

	* configure: regenerated.

2003-01-20  Derek Price  <derek@ximbiot.com>

	* NEWS: Update the news for the last release to mention that client
	builds are not affected by the security vulnerability.

2003-01-20  Derek Price  <derek@ximbiot.com>
